[gd_scene load_steps=19 format=4 uid="uid://dp5nkojhe76uj"]

[ext_resource type="Script" uid="uid://ca3r5irhk5shk" path="res://scripts/elevator_controller.gd" id="1_1"]
[ext_resource type="PackedScene" uid="uid://cblq616ut4q6b" path="res://assets/meshes/capsule_elevator.glb" id="2_7kuki"]
[ext_resource type="Texture2D" uid="uid://cfuc4fkaw22hx" path="res://assets/meshes/capsule_elevator_0.png" id="3_dno7p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_proximity"]
size = Vector3(4, 3, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(3, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(4, 0.2, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.3, 0.3, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(4, 0.2, 4)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
size = Vector3(1.8, 3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.4, 0.4, 0.5, 1)
metallic = 0.9
roughness = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l5pk8"]
resource_name = "material"
cull_mode = 2
albedo_texture = ExtResource("3_dno7p")
metallic = 1.0
roughness = 0.511877

[sub_resource type="ArrayMesh" id="ArrayMesh_wvkfe"]
_surfaces = [{
"aabb": AABB(-1.85559, 0.755118, -0.86534, 1.09768, 2.28465, 1.73068),
"format": 34896613377,
"index_count": 78,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAABAAMAAgABAAQABQADAAAABQAAAAIABgAFAAIAAgAHAAYAAgAEAAcABwAIAAUABQAIAAMABwAEAAgABAADAAgACQAKAAsADAALAAoADQAMAAoACQANAAoADAAOAAsADwAJAAsADwALAA4ACQAPABAAEQAPAA4AEAARAAkAEQAOAAwAEQANAAkADQARAAwA"),
"name": "material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 18,
"vertex_data": PackedByteArray("/v//////AAD//wAAXvgAAP//AAD//wAA/v///174AAAAAAAAXvgAAAAA/////wAAAABk+v//AAAAAAAA//8AAAAA//9e+AAA/v///wAAAAD//wAAoAcAAP7///+gBwAAAAAAAKAHAAD//wAAAAAAAAAA//+gBwAAAAD//wAAAAAAAGT6AAAAAAAAAAAAAAAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_s46bl"]
resource_name = "Sketchfab_Scene_Object_11"
_surfaces = [{
"aabb": AABB(-1.85559, 0.755118, -0.86534, 1.09768, 2.28465, 1.73068),
"attribute_data": PackedByteArray("NZSGiciUHHA1lBxwyJSGiaKTHHBsh4aJopOGiWyHHHA1lBxwopOGiTWUhomikxxwyJRSfFuVHHDIlBxwW5VSfMiUiIhblVJ8yJRSfFuViIg1lIaJyJQccMiUhok1lBxwopMccGyHholshxxwopOGiTWUHHCik4aJopMccDWUhonIlFJ8W5UccFuVUnzIlBxwyJSIiFuVUnxblYiIyJRSfGyHHHA2exxwNnv4iDZ7holsh4aJbIeGiTZ7hok2e/iINnsccGyHHHA="),
"format": 34896613399,
"index_count": 78,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKgArACgAKwAsACgALQAuAC8ALwAwAC0AMAAxAC0A"),
"material": SubResource("StandardMaterial3D_l5pk8"),
"name": "material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 50,
"vertex_data": PackedByteArray("/v///////z///wAAXvj/P///AAD///8//v///174/z8AAAAAXvgAAP7///9e+AAAAAD//174AAD//wAAXvgAAAAAAAD///8/AAD//174/z8AAP//////PwAAAABe+P8///8AAP//qioAAAAAXviqKgAAAAD//6oq//8AAF74qioAAP////+qKv7///9e+Koq/v//////qioAAP//XviqKv7///8AAP////8AAKAH///+////oAf/////AAAAAP//AAAAAKAH///+////oAf/////AACgB///AAD//6AH//8AAAAAAAD//wAA//+gB///AAAAAKAH//8AAP//AAD/////AAAAAFTVAAAAAKAHVNX//wAAoAdU1QAAAAAAAFTVAAD//wAAVNX+////oAdU1QAA//+gB1TV/v///wAAVNX//wAA///+fwAAAAD///5/AABk+v///n8AAP/////+f/7///////5//v///wAA//8AAP//AAD//wAAZPoAAP//AAAAAAAA/////wAAAAD///9/AAD/fwAA/38AAP9/AAD/f/7//3/+//9//v//f////3/+/wCA/v8AgP7//3///1RVVFVUVVRVVFVUVVRVVFVU1aoqVNWqKlTVqipU1aoq/7//f/+//3//v/9//7//f/9//3//f/9//3//f/9//3//P/9/////v/8//3////+/qipU1aoqVNWqKlTVqipU1aqqqqqqqqqqqqqqqqqqqqr/f////3//////FgD//0cA/3////7//3/+//9//v//f/7//3/+//9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wvkfe")

[sub_resource type="BoxMesh" id="BoxMesh_3"]
size = Vector3(4, 3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.5
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_4"]
size = Vector3(0.1, 3, 4)

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_1"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_2"]

[node name="Elevator" type="Node3D"]
script = ExtResource("1_1")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_7kuki")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.421357, -0.634351, 1.02917)

[node name="GLTF_SceneRootNode" parent="Sketchfab_Scene/Sketchfab_model/root" index="0"]
transform = Transform3D(1, 0, 0, 0, 2.22045e-16, -1, 0, 1, 2.22045e-16, -0.176844, 0, 0)

[node name="���������_012_0" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049736, 0, 0)
visible = false

[node name="���������_011_1" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0903168, 0, 0)

[node name="Object_15" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode/���������_011_1" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.356417, 0, 0)

[node name="Object_17" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode/���������_010_2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.16964, 0, 0)

[node name="���������_008_4" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode" index="4"]
visible = false

[node name="Object_21" parent="Sketchfab_Scene/Sketchfab_model/root/GLTF_SceneRootNode/���������_008_4" index="0"]
visible = false

[node name="DoorProximityArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 1.66703)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorProximityArea"]
shape = SubResource("BoxShape3D_proximity")

[node name="ElevatorArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorArea"]
shape = SubResource("BoxShape3D_1")

[node name="ElevatorPlatform" type="StaticBody3D" parent="."]
visible = false

[node name="PlatformMesh" type="MeshInstance3D" parent="ElevatorPlatform"]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPlatform"]
shape = SubResource("BoxShape3D_2")

[node name="ElevatorDoors" type="Node3D" parent="."]

[node name="DoorRight" type="MeshInstance3D" parent="ElevatorDoors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 1.5, 2)
visible = false
mesh = SubResource("BoxMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="DoorLeft" type="MeshInstance3D" parent="ElevatorDoors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.713053, -0.680818, 1.02243)
mesh = SubResource("ArrayMesh_s46bl")
skeleton = NodePath("")

[node name="ElevatorWalls" type="Node3D" parent="."]
visible = false

[node name="BackWall" type="MeshInstance3D" parent="ElevatorWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -2)
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="LeftWall" type="MeshInstance3D" parent="ElevatorWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.5, 0)
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="RightWall" type="MeshInstance3D" parent="ElevatorWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, 0)
mesh = SubResource("BoxMesh_4")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="ElevatorSounds" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamWAV_1")
volume_db = -5.0

[node name="DoorSounds" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamWAV_2")
volume_db = -10.0

[node name="ShakeTimer" type="Timer" parent="."]

[node name="TransitionUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TransitionOverlay" type="ColorRect" parent="TransitionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[editable path="Sketchfab_Scene"]
